@@ -27,40 +27,15 @@ public abstract class SpecificRecordBase
   public abstract Object get(int field);
   public abstract void set(int field, Object value);
 
-  public boolean equals(Object o) {
-    return SpecificRecordBase.equals(this, o);
+  public boolean equals(Object that) {
+    if (that == this) return true;                        // identical object
+    if (!(that instanceof SpecificRecord)) return false;  // not a record
+    if (this.getClass() != that.getClass()) return false; // not same schema
+    return this.compareTo((SpecificRecord)that) == 0;
   }
     
-  static boolean equals(SpecificRecord r1, Object o) {
-    if (r1 == o) return true;
-    if (!(o instanceof SpecificRecord)) return false;
-
-    SpecificRecord r2 = (SpecificRecord)o;
-    if (!r1.getSchema().equals(r2.getSchema())) return false;
-
-    int end = r1.getSchema().getFields().size();
-    for (int i = 0; i < end; i++) {
-      Object v1 = r1.get(i);
-      Object v2 = r2.get(i);
-      if (v1 == null) {
-        if (v2 != null) return false;
-      } else {
-        if (!v1.equals(v2)) return false;
-      }
-    }
-    return true;
-  }
-
   public int hashCode() {
-    return SpecificRecordBase.hashCode(this);
-  }
-
-  static int hashCode(SpecificRecord r) {
-    int result = 0;
-    int end = r.getSchema().getFields().size();
-    for (int i = 0; i < end; i++)
-      result += r.get(i).hashCode();
-    return result;
+    return SpecificData.get().hashCode(this, this.getSchema());
   }
 
   @SuppressWarnings(value="unchecked")
